--- a/less/services.less
+++ b/less/services.less
@@ -1,34 +1,45 @@
 header.services {
   background : url('../images/services-bg.jpg') no-repeat center center scroll;
+  overflow   : hidden;
   .cover;
 }
 
 .services-label {
   background-color : rgba(247, 171, 43, 0.7);
+  font-family      : "Kaushan Script", "Open Sans", serif, sans-serif;
   font-size        : 150%;
   font-weight      : 500;
-  margin-top       : 250px;
+  margin-top       : 220px;
   padding          : 5px;
   width            : 300px;
   margin-left      : 45%;
+  text-shadow      : 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .wwd-label {
   background-color : rgba(247, 95, 43, 0.7);
+  font-family      : "Shadows Into Light Two", "Open Sans", serif, sans-serif;
   font-size        : 120%;
   font-weight      : 500;
-  padding          : 5px;
+  padding          : 5px 5px 5px 15px;
   position         : relative;
   width            : 300px;
   margin-left      : 50%;
+  text-shadow      : 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.services-section {
+  margin-bottom : 80px;
+  margin-top    : 80px;
+  padding       : 50px;
 }
 
 .services-section-gray {
   background-color : #EDEDED;
-  padding          : 50px;
+  .services-section;
 }
 
 .services-section-white {
   background-color : #FFFFFF;
-  padding          : 50px;
+  .services-section;
 }
