--- a/less/works.less
+++ b/less/works.less
@@ -1,41 +1,48 @@
 header.works {
   background : url('../images/works-bg.jpg') no-repeat center center scroll;
+  overflow   : hidden;
   .cover;
 }
 
 .works-label {
   background-color : rgba(104, 0, 74, 0.7);
   color            : #EDEDED;
+  font-family      : "Kaushan Script", "Open Sans", serif, sans-serif;
   font-size        : 150%;
   font-weight      : 500;
-  margin-top       : 250px;
+  margin-top       : 220px;
   padding          : 5px;
   width            : 300px;
   margin-left      : 45%;
+  text-shadow      : 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .works-label-2 {
   background-color : rgba(169, 254, 75, 0.7);
   color            : #252525;
+  font-family      : "Shadows Into Light Two", "Open Sans", serif, sans-serif;
   font-size        : 120%;
   font-weight      : 500;
-  padding          : 5px;
+  padding          : 5px 5px 5px 25px;
   position         : relative;
   width            : 250px;
   margin-left      : 47%;
-  margin-top       : 10px;
+  margin-top       : 5px;
+  text-shadow      : 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .works-label-3 {
   background-color : rgba(9, 120, 74, 0.7);
-  color            : #252525;
+  color            : #EDEDED;
+  font-family      : "Patrick Hand", "Open Sans", serif, sans-serif;
   font-size        : 160%;
   font-weight      : 500;
-  padding          : 5px;
+  padding          : 5px 5px 5px 40px;
   position         : relative;
   width            : 200px;
   margin-left      : 43%;
-  margin-top       : 10px;
+  margin-top       : 5px;
+  text-shadow      : 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
 .embed-container {
